--- a/package.json
+++ b/package.json
@@ -11,16 +11,14 @@
   "author": "",
   "license": "ISC",
   "description": "",
-  "dependencies": {
-    "html-webpack-plugin": "^5.6.0",
-    "webpack": "^5.92.0",
-    "webpack-cli": "^5.1.4"
-  },
   "devDependencies": {
     "css-loader": "^7.1.2",
+    "html-webpack-plugin": "^5.6.0",
     "sass": "^1.77.5",
     "sass-loader": "^14.2.1",
     "style-loader": "^4.0.0",
+    "webpack": "^5.92.0",
+    "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
   }
 }
